# workshop-build-an-agent

./: .gitignore  MODULE_3_SUMMARY.md  README.md  apt.txt  jp_app_launcher.yaml  postBuild.bash  postBuild.py  preBuild.bash  requirements.txt  variables.env
.project/: brev.nvwb-startup.sh  spec.yaml
code/: evaluate_rag_agent.ipynb  evaluate_rag_agent.py  evaluate_report_agent.ipynb  evaluate_report_agent.py  evaluator.ipynb  langgraph.json  rag_agent.answers.py  rag_agent.py  secrets_management.ipynb  secrets_management_1.ipynb  secrets_management_2.ipynb  secrets_management_3.ipynb  secrets_management_master.ipynb
code/4-agent-customization/: 01_synthetic_data_generation.answers.ipynb  01_synthetic_data_generation.ipynb  02_grpo_training.ipynb  03_run_agent.ipynb  bash_agent.ipynb  customize_agent.ipynb  nemotron_unsloth_patch.py  pyproject.toml  test.ipynb
code/4-agent-customization/answer_key/: 01_synthetic_data_generation.answers.ipynb  02_grpo_training.answers.ipynb  03_run_agent.answers.ipynb  bash_agent.answers.ipynb
code/4-agent-customization/bash_agent/: bash.py  config.py  helpers.py  main_from_scratch.py  main_hf.py  main_langgraph.py  prompts.py  skills.py  test_local_bash_agent.py
code/4-agent-customization/data/langgraph_cli/: train.jsonl  val.jsonl
code/4-agent-customization/nemo_gym_resources/: __init__.py
code/4-agent-customization/nemo_gym_resources/langgraph_cli/: README.md  __init__.py  app.py
code/4-agent-customization/nemo_gym_resources/langgraph_cli/configs/: langgraph_cli.yaml
demo/: BLOCKY_BITS_INTEGRATION.md  README.md  (+5 more)
(+222 files in other folders)
